// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Snackbar] renders TestWrapper without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    testID="Button"
  >
    <Text>
      show snack bar
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`[Snackbar] should simulate showing snackbar 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      testID="Button"
    >
      <Text>
        show snack bar
      </Text>
    </TouchableOpacity>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#87b5ff",
          "borderRadius": 10,
          "bottom": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "fontSize": 16,
          "maxWidth": 718,
          "minWidth": 150,
          "opacity": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
          "position": "absolute",
          "textAlign": "left",
        }
      }
      testID="snackbar"
    >
      <Text
        style={
          Array [
            Object {
              "color": "white",
            },
          ]
        }
      >
        snackbar content
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "marginLeft": "auto",
              "marginRight": -5,
              "paddingLeft": 16,
            },
          ]
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 2,
                  "paddingLeft": 2,
                  "paddingRight": 4,
                  "paddingTop": 4,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "green",
                  },
                ]
              }
            >
              some action
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Snackbar] using provider renders TestElement using whole screen view without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      testID="Button"
    >
      <Text>
        show snack bar
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`[Snackbar] using provider renders TestElement without crashing 1`] = `
<SafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      testID="Button"
    >
      <Text>
        show snack bar
      </Text>
    </TouchableOpacity>
  </View>
</SafeAreaView>
`;

exports[`[Snackbar] using provider should simulate showing snackbar 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <SafeAreaView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        testID="Button"
      >
        <Text>
          show snack bar
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#87b5ff",
          "borderRadius": 10,
          "bottom": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "fontSize": 16,
          "maxWidth": 718,
          "minWidth": 150,
          "opacity": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
          "position": "absolute",
          "textAlign": "left",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "white",
            },
          ]
        }
      >
        snackbar content
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "marginLeft": "auto",
              "marginRight": -5,
              "paddingLeft": 16,
            },
          ]
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 2,
                  "paddingLeft": 2,
                  "paddingRight": 4,
                  "paddingTop": 4,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "green",
                  },
                ]
              }
            >
              some action
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </SafeAreaView>
</View>
`;
